--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@fastify/sensible": "^6.0.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0",
